# dhat-by-quteo

./: README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  apps.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: index.html  login.html  register.html
accounts/views/: register.py  views.py
app/: settings.py  urls.py  views.py
app/accounts/: forms.py  urls.py  views.py
app/accounts/templates/: about.html  index.html  login.html  logout.html
app/app/: asgi.py  settings.py  urls.py
app/static/css/: tailwind.css
app/templates/: base.html  index.html  navbar.html  sidebar.html
htmx_utils/: constants.py  response.py  shortcuts.py
qframe/: response.py  shortcuts.py  views.py
quteo/accounts/: models.py  urls.py
quteo/app/: wsgi.py
quteo/static/css/: tailwind.css
static/css/: tailwind.css
tasks/: admin.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/: add_task.html  delete_task_confirmation.html  edit_task.html  task.html  task_list.html
templates/: base.html  index.html  modal.html  partial.html  slideover.html
