[tool.poetry]
name = "quteo"
version = "0.1.0"
description = "quteo"
authors = ["Antti Kaarnikka"]
readme = "README.md"
packages = [{ include = "./*" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-htmx = "^1.17.0"
django-tailwind-cli = "^2.6.0"
django-crispy-forms = "^2.1"
crispy-tailwind = "^0.5.0"
django-browser-reload = "^1.12.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = { extras = ["d"], version = "^23.10.1" }
pytest = "^7.4.3"
isort = "^5.12.0"

[tool.poetry.scripts]
dev = "manage:runserver"
m = "manage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
