[tool.poetry]
name = "quteo"
version = "0.1.0"
description = "quteo"
authors = ["Antti Kaarnikka"]
readme = "README.md"
packages = [{ include = "./*" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.0"
django-htmx = "^1.17.0"
django-tailwind-cli = "^2.6.0"
django-crispy-forms = "^2.1"
crispy-tailwind = "^0.5.0"
django-browser-reload = "^1.12.0"
django-template-partials = "^23.4"

[tool.poetry.group.dev.dependencies]
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }
mypy = "^1.6.1"
black = { extras = ["d"], version = "^23.10.1" }
pytest = "^7.4.3"
isort = "^5.12.0"
djlint = "^1.34.1"

[tool.poetry.scripts]
dev = "manage:runserver"
m = "manage:main"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings"

[[tool.mypy.overrides]]
module = ["*.migrations", "*.settings", "*.tests"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
